// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for wrapHeading: false, disablePagination: {"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false}, overflowVisible: false and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0 !important;
  color: #000 !important;
}
::slotted([slot=subheading]) {
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0.5rem 0 0 !important;
  color: #000 !important;
  grid-column: 1 !important;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.125rem !important;
    line-height: 1.5555555556 !important;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.75rem !important;
    line-height: 1.4285714286 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.25rem !important;
    line-height: 1.4 !important;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2,::slotted([slot=heading]) {
    font-size: 2rem !important;
    line-height: 1.375 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.375rem !important;
    line-height: 1.4545454545 !important;
  }
}

@media(min-width:1760px) {
  h2,::slotted([slot=heading]) {
    font-size: 2.25rem !important;
    line-height: 1.3333333333 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
  cursor: grab;
}
.splide__track {
  position: relative;
  overflow: hidden;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: minmax(0px, 1fr) 0 0;
}
.btn {
  visibility: hidden;
}
.pagination {
  display: none;
  grid-auto-columns: 8px;
  grid-auto-flow: column;
  justify-content: center;
  gap: 8px;
  height: 8px;
}
.bullet {
  border-radius: 4px;
  background: #96989a;
}
.bullet--active {
  background: #000;
}
@media(min-width:480px) {
  .pagination {
    display: grid;
  }
}

@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    padding: 0.5rem;
  }
  .pagination {
    display: none;
  }
}

@media(min-width:1000px) {
  .pagination {
    display: grid;
  }
}

@media(min-width:1300px) {
  .pagination {
    display: none;
  }
}

@media(min-width:1760px) {
  .pagination {
    display: grid;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: false, disablePagination: false, overflowVisible: false and theme: dark 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0 !important;
  color: #fff !important;
}
::slotted([slot=subheading]) {
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0.5rem 0 0 !important;
  color: #fff !important;
  grid-column: 1 !important;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.125rem !important;
    line-height: 1.5555555556 !important;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.75rem !important;
    line-height: 1.4285714286 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.25rem !important;
    line-height: 1.4 !important;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2,::slotted([slot=heading]) {
    font-size: 2rem !important;
    line-height: 1.375 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.375rem !important;
    line-height: 1.4545454545 !important;
  }
}

@media(min-width:1760px) {
  h2,::slotted([slot=heading]) {
    font-size: 2.25rem !important;
    line-height: 1.3333333333 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
  cursor: grab;
}
.splide__track {
  position: relative;
  overflow: hidden;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: minmax(0px, 1fr) 0 0;
}
.btn {
  visibility: hidden;
}
.pagination {
  display: grid;
  grid-auto-columns: 8px;
  grid-auto-flow: column;
  justify-content: center;
  gap: 8px;
  height: 8px;
}
.bullet {
  border-radius: 4px;
  background: #7c7f81;
}
.bullet--active {
  background: #fff;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    padding: 0.5rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: false, disablePagination: false, overflowVisible: false and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0 !important;
  color: #000 !important;
}
::slotted([slot=subheading]) {
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0.5rem 0 0 !important;
  color: #000 !important;
  grid-column: 1 !important;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.125rem !important;
    line-height: 1.5555555556 !important;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.75rem !important;
    line-height: 1.4285714286 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.25rem !important;
    line-height: 1.4 !important;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2,::slotted([slot=heading]) {
    font-size: 2rem !important;
    line-height: 1.375 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.375rem !important;
    line-height: 1.4545454545 !important;
  }
}

@media(min-width:1760px) {
  h2,::slotted([slot=heading]) {
    font-size: 2.25rem !important;
    line-height: 1.3333333333 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
  cursor: grab;
}
.splide__track {
  position: relative;
  overflow: hidden;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: minmax(0px, 1fr) 0 0;
}
.btn {
  visibility: hidden;
}
.pagination {
  display: grid;
  grid-auto-columns: 8px;
  grid-auto-flow: column;
  justify-content: center;
  gap: 8px;
  height: 8px;
}
.bullet {
  border-radius: 4px;
  background: #96989a;
}
.bullet--active {
  background: #000;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    padding: 0.5rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: false, disablePagination: true, overflowVisible: false and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0 !important;
  color: #000 !important;
}
::slotted([slot=subheading]) {
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0.5rem 0 0 !important;
  color: #000 !important;
  grid-column: 1 !important;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.125rem !important;
    line-height: 1.5555555556 !important;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.75rem !important;
    line-height: 1.4285714286 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.25rem !important;
    line-height: 1.4 !important;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2,::slotted([slot=heading]) {
    font-size: 2rem !important;
    line-height: 1.375 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.375rem !important;
    line-height: 1.4545454545 !important;
  }
}

@media(min-width:1760px) {
  h2,::slotted([slot=heading]) {
    font-size: 2.25rem !important;
    line-height: 1.3333333333 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
  cursor: grab;
}
.splide__track {
  position: relative;
  overflow: hidden;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: minmax(0px, 1fr) 0 0;
}
.btn {
  visibility: hidden;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    padding: 0.5rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: true, disablePagination: false, overflowVisible: false and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0 !important;
  color: #000 !important;
}
::slotted([slot=subheading]) {
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0.5rem 0 0 !important;
  color: #000 !important;
  grid-column: 1 !important;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.125rem !important;
    line-height: 1.5555555556 !important;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.75rem !important;
    line-height: 1.4285714286 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.25rem !important;
    line-height: 1.4 !important;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2,::slotted([slot=heading]) {
    font-size: 2rem !important;
    line-height: 1.375 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.375rem !important;
    line-height: 1.4545454545 !important;
  }
}

@media(min-width:1760px) {
  h2,::slotted([slot=heading]) {
    font-size: 2.25rem !important;
    line-height: 1.3333333333 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
  cursor: grab;
}
.splide__track {
  position: relative;
  overflow: hidden;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: minmax(0px, 1fr) 0 0;
  padding: 0 max(1rem, 7vw);
}
.btn {
  visibility: hidden;
}
.pagination {
  display: grid;
  grid-auto-columns: 8px;
  grid-auto-flow: column;
  justify-content: center;
  gap: 8px;
  height: 8px;
}
.bullet {
  border-radius: 4px;
  background: #96989a;
}
.bullet--active {
  background: #000;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    padding: 0.5rem;
  }
}

@media(min-width:1760px) {
  .header {
    padding: 0 min(calc(43vw - 39.6rem), 12rem);
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: true, disablePagination: true, overflowVisible: false and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0 !important;
  color: #000 !important;
}
::slotted([slot=subheading]) {
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0.5rem 0 0 !important;
  color: #000 !important;
  grid-column: 1 !important;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.125rem !important;
    line-height: 1.5555555556 !important;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.75rem !important;
    line-height: 1.4285714286 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.25rem !important;
    line-height: 1.4 !important;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2,::slotted([slot=heading]) {
    font-size: 2rem !important;
    line-height: 1.375 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.375rem !important;
    line-height: 1.4545454545 !important;
  }
}

@media(min-width:1760px) {
  h2,::slotted([slot=heading]) {
    font-size: 2.25rem !important;
    line-height: 1.3333333333 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
  cursor: grab;
}
.splide__track {
  position: relative;
  overflow: hidden;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: minmax(0px, 1fr) 0 0;
  padding: 0 max(1rem, 7vw);
}
.btn {
  visibility: hidden;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    padding: 0.5rem;
  }
}

@media(min-width:1760px) {
  .header {
    padding: 0 min(calc(43vw - 39.6rem), 12rem);
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: true, disablePagination: true, overflowVisible: true and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2,::slotted([slot=heading]) {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0 !important;
  color: #000 !important;
}
::slotted([slot=subheading]) {
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  margin: 0.5rem 0 0 !important;
  color: #000 !important;
  grid-column: 1 !important;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.125rem !important;
    line-height: 1.5555555556 !important;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2,::slotted([slot=heading]) {
    font-size: 1.75rem !important;
    line-height: 1.4285714286 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.25rem !important;
    line-height: 1.4 !important;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2,::slotted([slot=heading]) {
    font-size: 2rem !important;
    line-height: 1.375 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.375rem !important;
    line-height: 1.4545454545 !important;
  }
}

@media(min-width:1760px) {
  h2,::slotted([slot=heading]) {
    font-size: 2.25rem !important;
    line-height: 1.3333333333 !important;
  }
  ::slotted([slot=subheading]) {
    font-size: 1.5rem !important;
    line-height: 1.5 !important;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
  cursor: grab;
}
.splide__track {
  position: relative;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: minmax(0px, 1fr) 0 0;
  padding: 0 max(1rem, 7vw);
}
.btn {
  visibility: hidden;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: minmax(0px, 1fr) min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    padding: 0.5rem;
  }
}

@media(min-width:1760px) {
  .header {
    padding: 0 min(calc(43vw - 39.6rem), 12rem);
  }
}
"
`;
